see source code and the LICENSE file


2. Changelog
------------
This is a non-exhaustive (but still near complete) changelog for
Joomla! 1.6, including alpha and beta versions.
Our thanks to all those people who've contributed bug reports and
code fixes.

Legend:

* -> Security Fix
# -> Issue Fix
$ -> Language fix or change
+ -> Addition
^ -> Change
- -> Removed
! -> Note

23-Nov-2010 Christophe Demko
 # [#23462] Checkboxes Form Field is not displayed correctly Options panel (Andrea Tarr)

25-Nov-2010 Andrew Eddie
 # Fixed issue [#23469] Category field for save is showing unauthorized categories (Elin Waring).
 # Fixed issue [#23445] Display of categories layouts has changed and is now incorrect (Elin Waring, bill richardson, Omar Ramos).
 # Fixed issue [#23454] Article Select in modal won't select if you've searched or filtered in Hathor (Andrea Tarr).

24-Nov-2010 Ian MacLennan
 # [#23430] some jhtml behavior's load twice code
 # [#23425] Use the correct Icon for a new Article in Category List view
 # [#23117] Add missing fields to Category Edit

24-Nov-2010 Jean-Marie Simonet
 $ Changing module manager state filter to Published/Unpublished to be consequent.
 #$ [#23448] typo in en-GB.ini language file. Normalizing strings to use global.
 $^ Adding a string accidentally deleted, code cleaning.
 #$ [#23475] Redirect manager state - published or enabled. Thanks Bill.

23-Nov-2010 Christophe Demko
 # [#23432] The installer has some issues with schema updates
 $^ hiding the 'extension' field (no longer needed) while editing a category + set the 'rules' field label not translatable

23-Nov-2010 Jean-Marie Simonet
 $ Deleting unused strings. Reordering strings in some ini files.
 # [#23447] image truncated by row height. Thanks Andrea.
 $^ Deleting unused strings and css, completing setting the 'rules' field label not translatable
 $ Updating xx-XX plg_user.ini and ordering some strings.

22-Nov-2010 Christophe Demko
 #$ Fix a language loading file